<resources>
    <string name="app_name">ConfigureAudio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_fragment">Welcome to\n Kramers Audio Configurator.</string>
    <string name="Start_fragment">A simple way to find how many speakers you need and where to install them.</string>
    <string name="noise_floor_ttl">What level of background noise is expected in the room?</string>
    <string name="room_size_ttl">Indicate the approximate room size.</string>
    <string name="purpose_ttl">What is the room used for?</string>
    <string name="speakerOption_ttl">Select a speaker option.</string>
    <string name="installation_ttl">How will the speakers be installed?</string>
    <string name="amplifiers_ttl">Select an amplifier option.</string>
    <string name="share_ttl">Configuration is complete.</string>
    <string name="share_txt">View quotation of our recommended equipment.  Click Share to email your quotation.</string>
    <string name="noise_1">Boardroom / Residential</string>
    <string name="noise_2">Open Space / Class Room</string>
    <string name="noise_3">Houses of Worship / Auditorium</string>
    <string name="noise_4">Cafe / Restaurant</string>
    <string name="noise_5">Transportation / Bar</string>
    <string name="noise_1_dB">45dB</string>
    <string name="noise_2_dB">55dB</string>
    <string name="noise_3_dB">60dB</string>
    <string name="noise_4_dB">65dB</string>
    <string name="noise_5_dB">75dB</string>
    <string name="pur_1">Background Music</string>
    <string name="pur_2">Speech</string>
    <string name="pur_3">Announcements</string>
    <string name="pur_4">Music</string>
    <string name="pur_1_db">+5db</string>
    <string name="pur_2_db">+10db</string>
    <string name="pur_3_db">+15db</string>
    <string name="pur_4_db">+20db</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="length">Length</string>
    <string name="install_1">Ceiling</string>
    <string name="install_2">Tile Ceiling</string>
    <string name="install_3">On-Wall</string>
    <string name="install_4">In-Wall</string>
    <string name="share_ttl">hgfghfg</string>
    <string name="share_txt">khghjgj</string>

    <string-array name="spinner_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

</resources>



