<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.AmplifiersFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amplifiers_ttl"
            style="@style/TitleFont"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"/>/>
        <LinearLayout
            android:layout_marginLeft="90dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:layout_marginTop="90dp"
            android:gravity="center"
            android:orientation="vertical"
            >
            <Button android:layout_height="@dimen/rect"
                android:layout_width="wrap_content"
                android:minWidth="90dp"
                android:id="@+id/amp_1"
                android:text="@string/noise_1"
                android:onClick="gotoNextFragment"
                android:gravity="bottom"
                android:textColor="@color/topBottomBar"
                android:background="@mipmap/ic_amplifire"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/amp_txt1"
                style="@style/TitleFont"
                android:text="a"
                />

            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="aa"
                android:id="@+id/amp_txt11"
                android:gravity="center"
                />

            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="aaa"
                android:id="@+id/amp_txt111"
                android:gravity="center"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_marginTop="270dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp">
            <Button android:layout_height="@dimen/rect"
                android:layout_width="@dimen/rect"
                android:text="@string/noise_2"
                android:id="@+id/amp_2"
                android:onClick="gotoNextFragment"
                android:gravity="bottom"
                android:layout_marginLeft="20dp"
                android:background="@mipmap/ic_amplifire"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="b"
                android:id="@+id/amp_txt2"
                style="@style/TitleFont"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="bb"
                android:id="@+id/amp_txt22"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="bbb"
                android:id="@+id/amp_txt222"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="400dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp">
            <Button android:layout_height="@dimen/rect"
                android:layout_width="@dimen/rect"
                android:text="@string/noise_2"
                android:id="@+id/amp_3"
                android:onClick="gotoNextFragment"
                android:gravity="bottom"
                android:background="@mipmap/ic_amplifire"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="c"
                android:id="@+id/amp_txt3"
                style="@style/TitleFont"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cc"
                android:id="@+id/amp_txt33"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ccc"
                android:id="@+id/amp_txt333"
                />
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>
